crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__type_decls-6.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(r#\"type Foo<T extends string = \"foo\"> = {bar: T};\"#)"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 46,
                    },
                },
                span: 0..46,
                kind: TypeDecl(
                    TypeDecl {
                        declare: false,
                        id: Ident {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 5,
                                },
                                end: Position {
                                    line: 0,
                                    column: 8,
                                },
                            },
                            span: 5..8,
                            name: "Foo",
                        },
                        type_ann: TypeAnn {
                            kind: Object(
                                ObjectType {
                                    elems: [
                                        Prop(
                                            TProp {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 38,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 44,
                                                    },
                                                },
                                                span: 38..44,
                                                name: "bar",
                                                optional: false,
                                                mutable: false,
                                                type_ann: TypeAnn {
                                                    kind: TypeRef(
                                                        TypeRef {
                                                            name: "T",
                                                            type_args: None,
                                                        },
                                                    ),
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 43,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 44,
                                                        },
                                                    },
                                                    span: 43..44,
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                    ],
                                },
                            ),
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 37,
                                },
                                end: Position {
                                    line: 0,
                                    column: 45,
                                },
                            },
                            span: 37..45,
                            inferred_type: None,
                        },
                        type_params: Some(
                            [
                                TypeParam {
                                    span: 9..33,
                                    name: Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 10,
                                            },
                                        },
                                        span: 9..10,
                                        name: "T",
                                    },
                                    constraint: Some(
                                        TypeAnn {
                                            kind: Keyword(
                                                KeywordType {
                                                    keyword: String,
                                                },
                                            ),
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 19,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 25,
                                                },
                                            },
                                            span: 19..25,
                                            inferred_type: None,
                                        },
                                    ),
                                    default: Some(
                                        TypeAnn {
                                            kind: Lit(
                                                Str(
                                                    Str {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 28,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 33,
                                                            },
                                                        },
                                                        span: 28..33,
                                                        value: "foo",
                                                    },
                                                ),
                                            ),
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 28,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 33,
                                                },
                                            },
                                            span: 28..33,
                                            inferred_type: None,
                                        },
                                    ),
                                },
                            ],
                        ),
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
