crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__type_decls.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"type Num = number;\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 18,
                    },
                },
                span: 0..18,
                kind: TypeDecl(
                    TypeDecl {
                        declare: false,
                        id: Ident {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 5,
                                },
                                end: Position {
                                    line: 0,
                                    column: 8,
                                },
                            },
                            span: 5..8,
                            name: "Num",
                        },
                        type_ann: TypeAnn {
                            kind: Keyword(
                                KeywordType {
                                    keyword: Number,
                                },
                            ),
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 11,
                                },
                                end: Position {
                                    line: 0,
                                    column: 17,
                                },
                            },
                            span: 11..17,
                            inferred_type: None,
                        },
                        type_params: None,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
