crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__types-2.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"declare let get_bar: (foo: Foo) => T;\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 8,
                    },
                    end: Position {
                        line: 0,
                        column: 37,
                    },
                },
                span: 8..37,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 12,
                                },
                                end: Position {
                                    line: 0,
                                    column: 19,
                                },
                            },
                            span: 12..19,
                            kind: Ident(
                                BindingIdent {
                                    name: "get_bar",
                                    mutable: false,
                                    span: 12..19,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 12,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 19,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: Some(
                            TypeAnn {
                                kind: Lam(
                                    LamType {
                                        params: [
                                            TypeAnnFnParam {
                                                pat: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 22,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 25,
                                                        },
                                                    },
                                                    span: 22..25,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "foo",
                                                            mutable: false,
                                                            span: 22..25,
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 22,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 25,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                type_ann: TypeAnn {
                                                    kind: TypeRef(
                                                        TypeRef {
                                                            name: "Foo",
                                                            type_args: None,
                                                        },
                                                    ),
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 27,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 30,
                                                        },
                                                    },
                                                    span: 27..30,
                                                    inferred_type: None,
                                                },
                                                optional: false,
                                            },
                                        ],
                                        ret: TypeAnn {
                                            kind: TypeRef(
                                                TypeRef {
                                                    name: "T",
                                                    type_args: None,
                                                },
                                            ),
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 35,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 36,
                                                },
                                            },
                                            span: 35..36,
                                            inferred_type: None,
                                        },
                                        type_params: None,
                                    },
                                ),
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 21,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 36,
                                    },
                                },
                                span: 21..36,
                                inferred_type: None,
                            },
                        ),
                        init: None,
                        declare: true,
                        rec: false,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
